--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-@media (max-width: 1440px) {
-  .wrapper {
-    width: 1440px;
-  }
-}
-
 .wrapper {
   margin: 0 auto;
   width: 1440px;
@@ -2188,7 +2182,12 @@
   }
   .home__menu,
   .home__call,
-  .banner__social {
+  .banner__social,
+  .banner-scroll,
+  .slider-map,
+  .projects-switcher,
+  .repair__promotion,
+  .pattern-list__items {
     display: none;
   }
   .home {
@@ -2208,6 +2207,164 @@
   }
   .btn {
     width: 90%;
+  }
+  .projects {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 727px;
+    padding: 0;
+    margin-top: 116px;
+  }
+  .projects-header {
+    max-width: 375px;
+  }
+  .project-title {
+    font-size: 22px;
+  }
+  .project-text {
+    font-size: 14px;
+    max-width: 311px;
+  }
+  .projects__slider {
+    margin: 0;
+  }
+  .projects-desc {
+    row-gap: 27px;
+  }
+  .projects__completed-projects {
+    width: 100%;
+  }
+  .slider-frames {
+    height: 242px;
+  }
+  .slider-frames .frame-content {
+    width: 100%;
+    height: 100%;
+  }
+  .desc-span,
+  .desc-span-text {
+    font-size: 14px;
+  }
+  .repair {
+    background-image: none;
+  }
+  .online-video {
+    margin: 0;
+    width: 100%;
+    height: 207px;
+  }
+  .repair__online-control {
+    top: 0;
+    background-color: #252525;
+    padding: 0 4.8%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .online-paragraph {
+    font-size: 14px;
+    line-height: 169.8%;
+    color: #FFFFFF;
+  }
+  .online-form {
+    margin: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .online-form .label-name,
+  .online-form .input-name,
+  .online-form .input-phone {
+    width: 100%;
+    font-size: 15px;
+    line-height: 20px;
+    color: rgba(255, 255, 255, 0.5);
+  }
+  .online-form .input-submit {
+    width: 100%;
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .online-form .form-input::-webkit-input-placeholder {
+    font-size: 18px;
+    line-height: 138.72%;
+    color: #FFFFFF;
+  }
+  .online-form .form-input:-ms-input-placeholder {
+    font-size: 18px;
+    line-height: 138.72%;
+    color: #FFFFFF;
+  }
+  .online-form .form-input::-ms-input-placeholder {
+    font-size: 18px;
+    line-height: 138.72%;
+    color: #FFFFFF;
+  }
+  .online-form .form-input::placeholder {
+    font-size: 18px;
+    line-height: 138.72%;
+    color: #FFFFFF;
+  }
+  .online-form .checkbox-text {
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+  }
+  .repair__types {
+    bottom: 0;
+    padding: 0 4.8%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .repair-examples__item {
+    margin: 0;
+  }
+  .repair-examples
+.repair-examples__item
+.item-list {
+    left: 0;
+    width: 270px;
+  }
+  .item-image {
+    width: 100%;
+    height: 365px;
+  }
+  .pattern {
+    background-image: none;
+    height: 400px;
+    margin-top: 100px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .pattern-gallery {
+    padding: 0;
+    position: static;
+  }
+  .pattern-gallery__line {
+    width: 340px;
+    height: 242px;
+    position: static;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    overflow: hidden;
+  }
+  .pattern-gallery__line:nth-of-type(2) {
+    margin-right: -500px;
+  }
+  .gallery-img {
+    width: 340px;
+    height: 242px;
+    content: url("assets/img/classic_1_mobile.png");
+  }
+  .pattern-list {
+    padding: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
