--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@ $FuturaDemiC: "FuturaDemiC";
 $FuturaBookC: "FuturaBookC";
 $YesevaOne: "Yeseva One";
 $ProximaNova: "Proxima Nova";
-
+$wrapper: 1440px;
 @mixin text-styling($font-family, $font-size, $line-height, $text-transform: none, $text-color: #ffffff) {
   font-family: $font-family;
   font-size: $font-size;
@@ -33,13 +33,12 @@ $ProximaNova: "Proxima Nova";
 }
 
 @media (max-width: 1440px) {
-  .wrapper {
-    width: 1440px;
-  }
+  $wrapper: 1440px;  
 }
+
 .wrapper {
   margin: 0 auto;  
-  width: 1440px;
+  width: $wrapper;
   overflow: hidden;
 }
 /* --- HEADER ---*/
@@ -1450,9 +1449,15 @@ $ProximaNova: "Proxima Nova";
   .wrapper {
     width: 375px;
   }
+
   .home__menu,
   .home__call,
-  .banner__social {
+  .banner__social,
+  .banner-scroll,
+  .slider-map,
+  .projects-switcher,
+  .repair__promotion,
+  .pattern-list__items{
     display: none;
   }
   .home {
@@ -1474,5 +1479,138 @@ $ProximaNova: "Proxima Nova";
   .btn {
     width: 90%;
   }
+  .projects {
+    flex-direction: column;
+    height: 727px;
+    padding: 0;
+    margin-top: 116px;
+  }
+  .projects-header {
+    max-width: 375px;
+  }
+  .project-title{
+    font-size: 22px;
+  }
+  .project-text {
+    font-size: 14px;
+    max-width: 311px;
+  }  
+  .projects__slider {
+    margin: 0;
+  }
+  .projects-desc {
+    row-gap: 27px;
+  }
+.projects__completed-projects {
+  width: 100%;
+}
+.slider-frames {
+  height: 242px;
+  .frame-content {
+    width: 100%;
+    height: 100%;
+  }
+}
+.desc-span,
+.desc-span-text {
+  font-size: 14px;
+}
+.repair {
+  background-image: none;
   
+}
+.online-video {
+  margin: 0;
+  width: 100%;
+  height: 207px;
+}
+  .repair__online-control {
+    top: 0;
+    background-color: #252525;
+    padding: 0 4.8%;
+    box-sizing: border-box;
+  }
+.online-paragraph {
+  font-size: 14px;
+  line-height: 169.8%;
+  color: #FFFFFF;
+}  
+.online-form {
+  margin: 0;
+  flex-direction: column;
+  .label-name, 
+.input-name, 
+.input-phone {
+  width: 100%;
+  font-size: 15px;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.input-submit {
+  width: 100%;
+    order: 4;
+}
+.form-input::placeholder {
+  font-size: 18px;
+  line-height: 138.72%;
+  color: #FFFFFF;
+  }
+  .checkbox-text {
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+  }
+}
+ .repair__types {
+   bottom: 0;
+   padding: 0 4.8%;
+    box-sizing: border-box;
+ } 
+ .repair-examples__item {
+   margin: 0;
+   
+     
+ }
+ .repair-examples 
+ .repair-examples__item 
+ .item-list {
+  left: 0;
+  width: 270px;
+
+ }
+ .item-image {
+   width: 100%;
+   height: 365px;
+ }
+ .pattern {
+   background-image: none;
+   height: 400px;
+   margin-top:100px;
+   flex-direction: column;
+ }
+ .pattern-gallery {
+   padding: 0;
+   position: static;
+ }
+ .pattern-gallery__line {
+  width: 340px;
+  height: 242px;
+  position: static;
+  flex-direction: row;
+  overflow: hidden;
+  &:nth-of-type(2) {
+    margin-right: -500px;
+  
+  }
+  
+ }
+ .gallery-img {
+   width: 340px;
+   height: 242px;
+   content: url("assets/img/classic_1_mobile.png");
+ }
+ .pattern-list {
+   padding: 0;
+ }
+
 }
